<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="example.du.com.myfirstapplication.MainActivity"
    android:weightSum="1">
    <ImageView

        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:src="@drawable/banckgrand"
        android:scaleType="centerCrop"
 />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#e80e206b"
        android:layout_marginTop="10dp"

        android:weightSum="1">


        <EditText
            android:id="@+id/login_username"
            android:layout_width="300dp"
            android:layout_height="39dp"
            android:hint="@string/login_namehint"
            android:background="#a9143d1e"
            android:paddingLeft="40dp"
            android:layout_margin="10dp"

            />

        <ImageButton
            android:id="@+id/del_username"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@color/colorAccent"
            android:layout_margin="5dp"


            />

        </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:background="#e80e206b"

         >


         <EditText
             android:id="@+id/login_password"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:background="#a9143d1e"
             android:paddingLeft="40dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:layout_margin="10dp"
             android:hint="@string/password">

         </EditText>

         <Button
             android:id="@+id/del_password"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:text="@string/del_username"
             android:layout_margin="5dp"
             />


     </LinearLayout>





        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login_name"
        android:background="#a9143d1e"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFFFF"


    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        >
        <Button
            android:id="@+id/forget_password_button"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/forget_password"

            />

        <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/register"



            >

        </Button>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_login"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="#1b3d7c"
        android:textColor="#FFFFFF"

        />


</LinearLayout>
